# mtllm_locally

./: .gitignore  README.md  README_old.md  app.py  good_morning.txt  main.jac  request.py
my-mtllm-plugin/: appointments.db  main.jac  pyproject.toml
my-mtllm-plugin/my_mtllm_plugin/: plugin.py  utilities.py
other/: Finetune_yt (1).ipynb  TinyLlama_GenAI.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  finetune.py  finetune_1.ipynb  server.ipynb  utils.py
tiny-byllm/: pyproject.toml
tiny-byllm/tiny_byllm/: plugin.py  utilities.py
tiny-server/: README.md  app.py  finetune.py  model.py  utils.py
