[tool.poetry]
name = "my-mtllm-plugin"
version = "0.1.0"
description = "My custom MTLLM plugin"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "my_mtllm_plugin"}] # <-- Add this line

[tool.poetry.dependencies]
python = "^3.11"
mtllm = "*"
jaclang = "*"

[tool.poetry.plugins."jac"]
my-mtllm-plugin = "my_mtllm_plugin.plugin:MyMtllmMachine"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

