[tool.poetry]
name = "tiny-byllm"
version = "0.1.0"
description = "My custom MTLLM plugin"
authors = ["Mihiran Wickramarathne <mihiranpiumanga@gmail.com>"]
packages = [{include = "tiny_byllm"}] 

[tool.poetry.dependencies]
python = "^3.11"
mtllm = "*"
jaclang = "*"

[tool.poetry.plugins."jac"]
tiny-byllm = "tiny_byllm.plugin:MyMtllmMachine"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

